dataset1235/2025-2/1153765216/users/2719941446/executions/2372395858_3449543993.log
== RUN (2025-08-28 18:41:03)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=(lado)/2*math.tan(math.pi/10)

area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 13.0
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 3.25
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 29.24
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 39.8
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 7.31
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 20.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:45:25)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=lado/2*math.tan()math.pi/10
area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
File "XXXX", line 4
    apotema=lado/2*math.tan()math.pi/10
                             ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
File "XXXX", line 4
    apotema=lado/2*math.tan()math.pi/10
                             ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
File "XXXX", line 4
    apotema=lado/2*math.tan()math.pi/10
                             ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
File "XXXX", line 4
    apotema=lado/2*math.tan()math.pi/10
                             ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
File "XXXX", line 4
    apotema=lado/2*math.tan()math.pi/10
                             ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
File "XXXX", line 4
    apotema=lado/2*math.tan()math.pi/10
                             ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:43:45)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=lado/2*math.tan(math.pi)/(10)

area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: -0.0
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: -0.0
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: -0.0
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: -0.0
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: -0.0
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: -0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:41:27)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=(lado)/2*math.tan(math.pi/10)

area=(5)*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 13.0
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 3.25
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 29.24
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 39.8
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 7.31
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 20.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:42:44)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=lado/2*math.tan(math.pi/10)

area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 13.0
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 3.25
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 29.24
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 39.8
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 7.31
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 20.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:44:35)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=lado/(2)*math.tan((math.pi)/10)

area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 13.0
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 3.25
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 29.24
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 39.8
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 7.31
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 20.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:57:09)
-- CODE: 
import math
lado=float(input("LADO: "))
pi=math.pi/10
apot=(lado)/2*math.tan(pi)
area=5*(lado*apot)
print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 13.0
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 3.25
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 29.24
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 39.8
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 7.31
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 20.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:43:32)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=lado/2*math.tan(math.pi)/10)

area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
File "XXXX", line 4
    apotema=lado/2*math.tan(math.pi)/10)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
File "XXXX", line 4
    apotema=lado/2*math.tan(math.pi)/10)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
File "XXXX", line 4
    apotema=lado/2*math.tan(math.pi)/10)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
File "XXXX", line 4
    apotema=lado/2*math.tan(math.pi)/10)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
File "XXXX", line 4
    apotema=lado/2*math.tan(math.pi)/10)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
File "XXXX", line 4
    apotema=lado/2*math.tan(math.pi)/10)
                                       ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:43:52)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=lado/2*math.tan(math.pi)/10

area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: -0.0
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: -0.0
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: -0.0
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: -0.0
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: -0.0
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: -0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:56:14)
-- CODE: 
import math
lado=float(input("LADO: "))
pi=math.pi/10
apot=(lado)/2*math.tan(pi)
area=5*lado*apot
print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 13.0
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 3.25
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 29.24
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 39.8
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 7.31
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 20.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:41:56)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=(lado)/2*math.tan(math.pi/10)

area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 13.0
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 3.25
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 29.24
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 39.8
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 7.31
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 20.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:57:04)
-- CODE: 
import.math
lado=float(input("LADO: "))
pi=math.pi/10
apot=(lado)/2*math.tan(pi)
area=5*(lado*apot)
print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:42:19)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=2*math.tan(math.pi/10)/lado

area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 3.25
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 3.25
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 3.25
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 3.25
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 3.25
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 3.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:40:49)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=lado/2*math.tan(math.pi/10)

area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 13.0
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 3.25
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 29.24
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 39.8
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 7.31
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 20.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:40:23)
-- CODE: 
from math import *

lado=float(input("LADO: "))

apotema=lado/2*math.tan(math.pi/10)

area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema=lado/2*math.tan(math.pi/10)
                   ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema=lado/2*math.tan(math.pi/10)
                   ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema=lado/2*math.tan(math.pi/10)
                   ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema=lado/2*math.tan(math.pi/10)
                   ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema=lado/2*math.tan(math.pi/10)
                   ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema=lado/2*math.tan(math.pi/10)
                   ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:59:41)
-- CODE: 
import math
lado=float(input("LADO: "))

tans=2*math.tan(math.pi/10)
apot=lado/tans

area=5*lado*apot

ptint(round(area,2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ptint(round(area,2))
    ^^^^^
NameError: name 'ptint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ptint(round(area,2))
    ^^^^^
NameError: name 'ptint' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ptint(round(area,2))
    ^^^^^
NameError: name 'ptint' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ptint(round(area,2))
    ^^^^^
NameError: name 'ptint' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ptint(round(area,2))
    ^^^^^
NameError: name 'ptint' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ptint(round(area,2))
    ^^^^^
NameError: name 'ptint' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:42:35)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=lado//2*math.tan(math.pi/10)

area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 13.0
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 3.25
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 29.24
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 34.12
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 4.87
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 16.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:42:17)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=2*math.tan(math.pi/10)/lado

area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 3.25
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 3.25
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 3.25
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 3.25
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 3.25
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 3.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:57:15)
-- CODE: 
import math
lado=float(input("LADO: "))
pi=math.pi/10
apot=(lado)/2*math.tan(pi)
area=5*(lado*apot)
print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 13.0
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 3.25
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 29.24
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 39.8
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 7.31
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 20.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:59:52)
-- CODE: 
import math
lado=float(input("LADO: "))

tans=2*math.tan(math.pi/10)
apot=lado/tans

area=5*lado*apot

print(round(area,2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 123.11
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 30.78
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 276.99
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 377.02
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 69.25
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 192.36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:41:49)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=(lado)/2(*math.tan(math.pi/10))

area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  apotema=(lado)/2(*math.tan(math.pi/10))
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema=(lado)/2(*math.tan(math.pi/10))
                   ^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 2 argument after * must be an iterable, not float
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  apotema=(lado)/2(*math.tan(math.pi/10))
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema=(lado)/2(*math.tan(math.pi/10))
                   ^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 2 argument after * must be an iterable, not float
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  apotema=(lado)/2(*math.tan(math.pi/10))
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema=(lado)/2(*math.tan(math.pi/10))
                   ^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 2 argument after * must be an iterable, not float
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  apotema=(lado)/2(*math.tan(math.pi/10))
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema=(lado)/2(*math.tan(math.pi/10))
                   ^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 2 argument after * must be an iterable, not float
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  apotema=(lado)/2(*math.tan(math.pi/10))
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema=(lado)/2(*math.tan(math.pi/10))
                   ^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 2 argument after * must be an iterable, not float
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  apotema=(lado)/2(*math.tan(math.pi/10))
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema=(lado)/2(*math.tan(math.pi/10))
                   ^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 2 argument after * must be an iterable, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:59:40)
-- CODE: 
import math
lado=float(input("LADO: "))

tans=2*math.tan(math.pi/10)
apot=lado/tans

area=5*lado*apot

ptint(round(area,2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ptint(round(area,2))
    ^^^^^
NameError: name 'ptint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ptint(round(area,2))
    ^^^^^
NameError: name 'ptint' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ptint(round(area,2))
    ^^^^^
NameError: name 'ptint' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ptint(round(area,2))
    ^^^^^
NameError: name 'ptint' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ptint(round(area,2))
    ^^^^^
NameError: name 'ptint' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ptint(round(area,2))
    ^^^^^
NameError: name 'ptint' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:44:23)
-- CODE: 
import math
lado=float(input("LADO: "))

apotema=lado/(2)*math.tan(math.pi)/10

area=5*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: -0.0
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: -0.0
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: -0.0
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: -0.0
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: -0.0
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: -0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:59:57)
-- CODE: 
import math
lado=float(input("LADO: "))

tans=2*math.tan(math.pi/10)
apot=lado/tans

area=5*lado*apot

print(round(area,2))


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 123.11
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 30.78
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 276.99
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 377.02
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 69.25
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 192.36
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:56:37)
-- CODE: 
import math
lado=float(input("LADO: "))
pi=math.pi/10
apot=(lado)/2*math.tan(pi)
area=5*(lado*apot)
print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
LADO: 13.0
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
LADO: 3.25
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
LADO: 29.24
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
LADO: 39.8
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
LADO: 7.31
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
LADO: 20.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
